going to rename dirs

--- a/toledotechevents_web/web/index.html
+++ b/toledotechevents_web/web/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="manifest" href="manifest.json" />
-    <meta name="theme-color" content="#ffffff" />
+    <meta name="theme-color" content="#0C4964" />
     <title>toledotechevents_web</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
