compiles sass and test sw cache.

--- a/web/web/index.html
+++ b/web/web/index.html
@@ -11,6 +11,6 @@
     <script defer src="main.dart.js"></script>
   </head>
   <body>
-    <my-app>Loading...</my-app>
+    <my-app class="dark-theme">Loading...</my-app>
   </body>
 </html>
