fucking around to no avail

--- a/web/lib/app_component.html
+++ b/web/lib/app_component.html
@@ -1,4 +1,20 @@
-<h1>My First AngularDart App</h1>
-
+<!-- <header class="material-header">
+  <div class="material-header-row">
+    <material-button icon class="material-drawer-button" (trigger)="drawer.toggle()">
+      <material-icon icon="menu"></material-icon>
+    </material-button>
+    <span class="material-header-title">Simple Layout</span>
+    <div class="material-spacer"></div>
+    <nav class="material-navigation">
+      <a>Link 1</a>
+    </nav>
+    <nav class="material-navigation">
+      <a>Link 2</a>
+    </nav>
+    <nav class="material-navigation">
+      <a>Link 3</a>
+    </nav>
+  </div>
+</header> -->
 <event-list></event-list>
 <splash-screen></splash-screen>
