--- a/web/web/index.html
+++ b/web/web/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="manifest" href="manifest.json" />
-    <meta name="theme-color" content="#0C4964" />
-    <title>toledotechevents_web</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="favicon.png">
-    <script defer src="main.dart.js"></script>
-  </head>
-  <body>
-    <my-app class="dark-theme">Loading...</my-app>
-  </body>
+
+<head>
+  <link rel="manifest" href="manifest.json" />
+  <meta name="theme-color" content="#0C4964" />
+  <title>toledotechevents_web</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link type="text/css" rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/png" href="favicon.png">
+  <script defer src="main.dart.js"></script>
+</head>
+
+<body class="themed dark-theme">
+  <my-app>
+    Loading...
+    <!-- <img src="splash.jpg" alt="Splash" /> -->
+  </my-app>
+</body>
+
 </html>
