moving towards "themify" scss stuff, but it may not be necessary.

--- a/web/web/index.html
+++ b/web/web/index.html
@@ -12,7 +12,7 @@
   <script defer src="main.dart.js"></script>
 </head>
 
-<body class="themed dark-theme">
+<body class="themed light-theme">
   <my-app>
     Loading...
     <!-- <img src="splash.jpg" alt="Splash" /> -->
