Theming is working but component styles are not so easy to override.

--- a/web/lib/app_component.html
+++ b/web/lib/app_component.html
@@ -16,5 +16,11 @@
     </nav>
   </div>
 </header> -->
+<div class="primary-color">
+    primary app
+</div>
+<div class="secondary-color">
+    secondary app
+</div>
 <event-list></event-list>
 <splash-screen></splash-screen>
