--- a/web/web/index.html
+++ b/web/web/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="theme-dark">
 
 <head>
   <link rel="manifest" href="manifest.json" />
@@ -12,7 +12,13 @@
   <script defer src="main.dart.js"></script>
 </head>
 
-<body class="themed light-theme">
+<body>
+  <div class="primary-color">
+    primary index
+  </div>
+  <div class="secondary-color">
+    secondary index
+  </div>
   <my-app>
     Loading...
     <!-- <img src="splash.jpg" alt="Splash" /> -->
