themed list-item:hover. took like 4 hours.

--- a/web/lib/app_component.html
+++ b/web/lib/app_component.html
@@ -22,5 +22,6 @@
 <div class="secondary-color">
     secondary app
 </div>
+<span class="primary-button">CLICK</span>
 <event-list></event-list>
 <splash-screen></splash-screen>
