--- a/web/web/index.html
+++ b/web/web/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="theme-light">
+<html class="theme-dark">
 
 <head>
   <link rel="manifest" href="manifest.json" />
@@ -13,15 +13,30 @@
 </head>
 
 <body>
-  <div class="primary-color">
-    primary index
-  </div>
-  <div class="secondary-color">
-    secondary index
-  </div>
   <my-app>
-    Loading...
-    <!-- <img src="splash.jpg" alt="Splash" /> -->
+    <style>
+      .container {
+        background-color: #0C4964;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+      .splash {
+        height: 125px;
+        width: 256px;
+      }
+    </style>
+    <div class="container">
+      <img class="splash" src="packages/toledotechevents/assets/images/splash.jpg" alt="Splash"/>
+      Loading...
+    </div>
   </my-app>
 </body>
 
