add progress to loading screen

--- a/web/web/index.html
+++ b/web/web/index.html
@@ -15,7 +15,7 @@
 <body>
   <my-app>
     <style>
-      .splash {
+      #splash {
         background-color: #0C4964;
         position: absolute;
         top: 0;
@@ -32,16 +32,16 @@
         height: 125px;
         width: 256px;
       }
-      .loading {
+      #loading {
         background-color: #0C4964;
         font: 16px 'Ubuntu';
         position: absolute;
         bottom: 100px;
       }
     </style>
-    <div class="splash">
+    <div id="splash">
       <img src="packages/toledotechevents/assets/images/splash.jpg" alt="Splash"/>
-      <div class="loading">Loading...</div>
+      <div id="loading">Loading...</div>
     </div>
   </my-app>
 </body>
