--- a/web/lib/app_component.html
+++ b/web/lib/app_component.html
@@ -16,12 +16,7 @@
     </nav>
   </div>
 </header> -->
-<div class="primary-color">
-    primary app
-</div>
-<div class="secondary-color">
-    secondary app
-</div>
-<span class="primary-button">CLICK</span>
+<span class="primary-button">Click</span>
+<span class="secondary-button">Click</span>
 <event-list></event-list>
 <splash-screen></splash-screen>
