--- a/web/web/index.html
+++ b/web/web/index.html
@@ -11,11 +11,11 @@
   <link rel="icon" type="image/png" href="favicon.png">
   <script defer src="main.dart.js"></script>
 </head>
-
 <body>
   <my-app>
     <style>
       #splash {
+        display: none;
         background-color: #0C4964;
         position: absolute;
         top: 0;
@@ -23,7 +23,6 @@
         left: 0;
         right: 0;
 
-        display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
@@ -34,16 +33,34 @@
       }
       #loading {
         background-color: #0C4964;
+        color: white;
         font: 16px 'Ubuntu';
         position: absolute;
         bottom: 100px;
+      }
+      #loadingNoSplash {
+        display: none;
+        font: 16px 'Ubuntu';
       }
     </style>
     <div id="splash">
       <img src="packages/toledotechevents/assets/images/splash.jpg" alt="Splash"/>
       <div id="loading">Loading...</div>
     </div>
+    <div id="loadingNoSplash">Loading...</div>
   </my-app>
+  <script>
+      console.log('Javascript started');
+      if (localStorage.getItem('splash') != 'false') {
+          document.getElementById('splash').style.display = 'flex';
+      } else {
+          document.getElementById('loadingNoSplash').style.display = 'block';
+      }
+      let theme = localStorage.getItem('theme');
+      if (theme != null) {
+          document.documentElement.className = `theme-${theme.toLowerCase()}`;
+      }
+  </script>
 </body>
 
 </html>
